# mixjack

./: .gitignore  Cargo.toml  README.md  config.toml
novation_launch_control/: Cargo.toml  README.md
novation_launch_control/src/: lib.rs
src/: audio.rs  cli.rs  data.rs  effects.rs  gui.rs  lib.rs  main.rs  monitor_data.rs  ports.rs
src/audio/: info.rs
src/gui/: widgets.rs
